<resources>
    <string name="app_name">Employment Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo_description">App logo</string>
    <string name="hint_position_apply">Position</string>
    <string name="hint_desired_salary">Desired Salary</string>
    <string name="hint_date_available_for_work">Date Available for Work</string>
    <string name="but_proceed">Proceed</string>
    <string name="title_personal_information">Personal Information</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_firstname">Firstname</string>
    <string name="title_education">Education</string>
    <string name="hint_school_name">School</string>
    <string name="hint_year_attended">Year Attended</string>
    <string name="hint_degree_received">Degree Received</string>
    <string name="hint_major">Major</string>
    <string name="hint_address">Address</string>
    <string name="but_next">Next</string>
    <string name="title_employment">Employment</string>
    <string name="hint_employer">Employer</string>
    <string name="hint_date_employed">Date Employed</string>
    <string name="hint_work_phone">Work Phone</string>
    <string name="hint_pay_rate">Pay Rate</string>
    <string name="hint_to">To</string>
    <string name="hint_city">City</string>
    <string name="hint_position">Position</string>
    <string name="hint_duties_performed">Duties Performed</string>
    <string name="hint_supervisor">Supervisor Name and Title</string>
    <string name="hint_reason_leaving">Reason for Leaving</string>
    <string name="hint_contact_them">May we contact them?</string>
    <string name="but_add">Add</string>
    <string name="title_references">References</string>
    <string name="hint_name_references">Name</string>
    <string name="hint_title_references">Title</string>
    <string name="hint_references_company">Company</string>
    <string name="hint_references_phone">Phone</string>
    <string name="hint_certify">I certify that all answers given herein are true and complete to the best of my knowledge.</string>
    <string name="hint_authorize">I authorize investigation of all statements contained in this application of the employment as may be necessary in arriving at an employment decision.</string>
    <string name="hint_event">In the event of employment, I understand the false or misleading information given in my application or interview(s) may result in discharge.</string>
    <string name="lblSignature">Signature</string>
    <string name="copyright">@2023 Copyright KodeGO Employment Application</string>
    <string name="but_browse_sign">Browse</string>
    <string name="title_education_background">List of Education Background</string>
    <string name="but_edit">Edit</string>
    <string name="but_remove">Remove</string>
    <string name="hint_others">Others</string>
    <string name="title_list_of_reference">List of Reference</string>

    <string-array name="position_list">
        <item name="default">Select Position to Apply for</item>
        <item name="Android/ Mobile Dev">Android/ Mobile Dev</item>
        <item name="Web Developer">Web Dev</item>
        <item name="FullStack Web Developer">FullStack Web Dev</item>
        <item name="FullStack Software Developer">FullStack Software Dev</item>
        <item name="UIX Designer">UIX Designer</item>
        <item name="QA Engineer">QA Engineer</item>
        <item name="Technical Support Engineer">Technical Support Engineer</item>
        <item name="IT Specialist">IT Specialist</item>
        <item name="DB Administrator">DB Administrator</item>
        <item name="Customer Support">Customer Support</item>
    </string-array>

</resources>